CAMEL-22361: camel-groovy-xml - Add data format that uses groovy xml that is easy to use and no need for POJOs

--- a/docs/components/modules/dataformats/nav.adoc
+++ b/docs/components/modules/dataformats/nav.adoc
@@ -18,6 +18,7 @@
 ** xref:flatpack-dataformat.adoc[Flatpack]
 ** xref:fory-dataformat.adoc[Fory]
 ** xref:grok-dataformat.adoc[Grok]
+** xref:groovyXml-dataformat.adoc[Groovy XML]
 ** xref:gzipDeflater-dataformat.adoc[GZip Deflater]
 ** xref:hl7-dataformat.adoc[HL7]
 ** xref:ical-dataformat.adoc[iCal]
