CAMEL-22371: camel-ognl: deprecated

--- a/components/camel-ognl/src/main/docs/ognl-language.adoc
+++ b/components/camel-ognl/src/main/docs/ognl-language.adoc
@@ -1,10 +1,11 @@
-= OGNL Language
+= OGNL Language (deprecated)
 :doctitle: OGNL
 :shortname: ognl
 :artifactid: camel-ognl
 :description: Evaluates an OGNL expression (Apache Commons OGNL).
 :since: 1.1
-:supportlevel: Stable
+:supportlevel: Stable-deprecated
+:deprecated: *deprecated*
 :tabs-sync-option:
 //Manually maintained attributes
 :camel-spring-boot-name: ognl
