CAMEL-22413: Explain the situation to use Kamelet EIP in the catalog

--- a/core/camel-core-engine/src/main/docs/modules/eips/pages/kamelet-eip.adoc
+++ b/core/camel-core-engine/src/main/docs/modules/eips/pages/kamelet-eip.adoc
@@ -1,7 +1,7 @@
 = Kamelet EIP
 :doctitle: Kamelet
 :shortname: kamelet
-:description: To call Kamelets in special situations
+:description: To call Kamelets in special situations. By default, calling kamelets should be done as endpoints with the kamelet component, such as to(kamelet:mykamelet). When a Kamelet is designed for a special use-case such as aggregating messages, and returning a response message only when a group of aggregated messages is completed. In other words, kamelet does not return a response message for every incoming message. In special situations like these, then you must use this Kamelet EIP instead of using the kamelet component.
 :since: 
 :supportlevel: Stable
 :tabs-sync-option:
