Add upgrade recipe tool note into relevant migration guides

--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_1.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_1.adoc
@@ -4,6 +4,8 @@ This document is for helping you upgrade your Apache Camel application
 from Camel 4.x to 4.y. For example, if you are upgrading Camel 4.0 to 4.2, then you should follow the guides
 from both 4.0 to 4.1 and 4.1 to 4.2.
 
+include::migration-app-note.adoc[]
+
 == Upgrading Camel 4.0 to 4.1
 
 === camel-api
@@ -246,3 +248,4 @@ The default value for `sessionTimeoutMs` has been updated to  `45000` ms, while 
 
 A new rest configuration option, `enableNoContentResponse`,
 allows HTTP 204 to be returned with an empty body if a Message contains an empty JSON object or empty XML root object when set to `true`.
+
